# CNIAI

cniai/: .gitignore  CMakeLists.txt
cniai/cmake/: install_dependencies.cmake
cniai/cniai_cuda_kernel/: CMakeLists.txt  build.sh
cniai/cniai_cuda_kernel/include/cniai_cuda_kernel/: common.h  preprocess.h  version.h
cniai/cniai_cuda_kernel/src/: cvt_color.cu  rgb_resize.cu  rgb_resize_pad.cu  rgb_resize_pad_norm.cu
cniai/src/: cniai.cc
cniai/src/common/: common.h  cuda_util.h  logging.h  nvjpeg_util.h  thread_pool.h
cniai/src/nvjpeg/: nvjpeg_decoder.cc  nvjpeg_decoder.h  nvjpeg_image.cc  nvjpeg_image.h
cniai/src/util/: file_util.cc  file_util.h  image_util.cc  image_util.h
cniai/tests/: CMakeLists.txt  cniaiNvjpegDecoderTest.cc  logTest.cc  test_cuda_kernel_rgb_packed_planar_swap.cc  test_log.cc  test_nvjpeg_decoder.cc  threadPoolTest.cc
cniai/tests/cuda_kernel/: cudaKernelRgbPackedPlanarSwapTest.cc
